work with one workflow

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -3,7 +3,7 @@ name: Deploy pipeline for DEV
 on:
   push:
     tags:
-      - 'dev_v*'
+      - 'feature_v*'
 
 jobs:
   deploy:
@@ -26,10 +26,33 @@ jobs:
           echo ${{ github.base_ref}}
           echo ${{ github.head_ref}}
 
-      - name: Trigger Airflow DAG update
-        uses: peter-evans/repository-dispatch@v2
+      # - name: Trigger Airflow DAG update
+      #   uses: peter-evans/repository-dispatch@v2
+      #   with:
+      #     token: ${{ secrets.MY_GITHUB_TOKEN }}
+      #     repository: junghanKang/cd-test-repo-2
+      #     event-type: update-dags-repo
+      #     client-payload: '{"branch": "main", "tag": "${{ env.RELEASE_VERSION }}"}'
+
+  update-dags-repo:
+    runs-on: ubuntu-latest
+    needs: deploy
+
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
         with:
-          token: ${{ secrets.MY_GITHUB_TOKEN }}
           repository: junghanKang/cd-test-repo-2
-          event-type: update-dags-repo
-          client-payload: '{"branch": "main", "tag": "${{ env.RELEASE_VERSION }}"}'
+          ref: main
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
+
+      - name: Update .env file
+        run: |
+          sed -i "s/IMAGE_TAG=.*/IMAGE_TAG=${{ env.RELEASE_VERSION }}/g" .env
+
+      - name: Commit and push DAG changes
+        run: |
+          git config --global user.email "junghan.john.kang@gmail.com"
+          git config --global user.name "John"
+          git commit -am "Update gtaas-processing docker image tag"
+          git push
