--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Update .env file
         run: |
-          sed -i "s/IMAGE_TAG=.*/IMAGE_TAG=${{ env.RELEASE_VERSION }}/g" .env
+          sed -i "s/IMAGE_TAG=.*/IMAGE_TAG=${GITHUB_REF#refs/*/}/g" .env
 
       - name: Commit and push DAG changes
         run: |
