--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,7 +7,7 @@ on:
       - 'develop'
     paths:
       - 'some_validations.json'
-      - 'some_converts2.json'
+      - 'some_converts.json'
 
 jobs:
   prepare:
